<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/location_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAppThemeDark"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small.Inverse"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Chicago,IL 60616" />

            <TextView
                android:id="@+id/office_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_view"
                tools:text="United States Senate" />

            <TextView
                android:id="@+id/name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/office_view"
                tools:text="Tammy Duckworth" />

            <TextView
                android:id="@+id/party_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_view"
                tools:text="(Democratic)" />

            <ImageView
                android:id="@+id/official_image_view"
                android:layout_width="140dp"
                android:layout_height="182dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/content_official_image"
                android:onClick="onOfficialImageClick"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/party_view"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/address"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_image_view" />

            <TextView
                android:id="@+id/address_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/official_image_view"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/phone"
                android:textColor="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/address_view" />

            <TextView
                android:id="@+id/phone_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/address_view"
                tools:text="TextView"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_view" />

            <TextView
                android:id="@+id/email_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/phone_view"
                tools:text="TextView"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/website"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_view" />

            <TextView
                android:id="@+id/web_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:maxLines="2"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/email_view"
                tools:text="TextView"
                app:layout_constraintRight_toRightOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="106dp"
                tools:layout_editor_absoluteX="114dp"
                tools:layout_editor_absoluteY="81dp" />

            <ImageView
                android:id="@+id/youtube_icon"
                android:layout_width="35dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_youtube"
                android:onClick="onYoutubeClick"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/google_icon"
                app:layout_constraintTop_toBottomOf="@+id/web_view"
                app:srcCompat="@drawable/youtube" />

            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="35dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/google_content"
                android:onClick="onGoogleClick"
                app:layout_constraintLeft_toRightOf="@+id/youtube_icon"
                app:layout_constraintRight_toLeftOf="@+id/twitter_icon"
                app:layout_constraintTop_toBottomOf="@+id/web_view"
                app:srcCompat="@drawable/googleplus" />

            <ImageView
                android:id="@+id/twitter_icon"
                android:layout_width="35dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_twitter"
                android:onClick="onTwitterClick"
                app:layout_constraintLeft_toRightOf="@+id/google_icon"
                app:layout_constraintRight_toLeftOf="@+id/facebook_icon"
                app:layout_constraintTop_toBottomOf="@+id/web_view"
                app:srcCompat="@drawable/twitter" />

            <ImageView
                android:id="@+id/facebook_icon"
                android:layout_width="35dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/content_facebook"
                android:onClick="onFacebookClick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/twitter_icon"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/web_view"
                app:srcCompat="@drawable/facebook" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>